tests/parser/errors/playerdec_field_no_colon.gbl
player p { dollars 1$, chance: 1%, streak: 1x }
